--- a/kubernetes/blockchain-explorer-app_deploy.yaml
+++ b/kubernetes/blockchain-explorer-app_deploy.yaml
@@ -20,7 +20,7 @@ spec:
         command: ["sh" , "-c" , "/fabric/config/explorer/app/run.sh"]
         env:
         - name: TZ
-          value: "America/Sao_Paulo"
+          value: "Europe/Amsterdam"
         - name: DATABASE_HOST
           value: blockchain-explorer-db
         - name: DATABASE_USERNAME
