--- a/kubernetes/blockchain-org2peer0_svc.yaml
+++ b/kubernetes/blockchain-org2peer0_svc.yaml
@@ -15,6 +15,6 @@ spec:
   - protocol: TCP
     port: 30111
     name: events
-  - protocol: TCP
-    port: 5984
-    name: couchdb
+  # - protocol: TCP
+  #   port: 5984
+  #   name: couchdb
