--- a/monitoring/blockchain-explorer-db_deploy.yaml
+++ b/monitoring/blockchain-explorer-db_deploy.yaml
@@ -1,32 +1,31 @@
 apiVersion: extensions/v1beta1
 kind: Deployment
 metadata:
-  name: blockchain-explorer-app
+  name: blockchain-explorer-db
 spec:
   replicas: 1
   template:
     metadata:
       labels:
-        name: explorer
+        name: explorer-db
     spec:
       volumes:
-      - name: fabricfiles
+      - name: fabricfiles20
         persistentVolumeClaim:
-          claimName: fabric-pvc
-
+          claimName: fabric-pvc20
       containers:
-      - name: explorer
-        image: hyperledger/explorer:latest
-        command: ["sh" , "-c" , "/fabric/config/explorer/app/run.sh"]
+      - name: postgres
+        image: hyperledger/explorer-db:latest
         env:
         - name: TZ
           value: "Europe/Amsterdam"
-        - name: DATABASE_HOST
-          value: blockchain-explorer-db
+        - name: DATABASE_DATABASE
+          value: fabricexplorer
         - name: DATABASE_USERNAME
           value: hppoc
         - name: DATABASE_PASSWORD
           value: password
         volumeMounts:
-        - mountPath: /fabric
-          name: fabricfiles
+        - mountPath: /docker-entrypoint-initdb.d/createdb.sh
+          name: fabricfiles20
+          subPath: createdb.sh
